test/files/pos/t12133/test.scala
class Test {
  new pkg.I
  new pkg.J
}
