test/files/neg/t1211b/test.scala

object Test extends I with App {
  println {
    new this.K
    new Test.K
  }
}
